[gd_scene load_steps=36 format=3 uid="uid://crnlfdu8xctcu"]

[ext_resource type="Script" path="res://Entity/Player/Player.gd" id="1_qmea8"]
[ext_resource type="Script" path="res://Entity/StateMachine.gd" id="2_dti1d"]
[ext_resource type="Script" path="res://Entity/Player/Player States/PlayerStateInAir.gd" id="5_ykyoh"]
[ext_resource type="Script" path="res://Entity/Player/Player States/PlayerStateMissile.gd" id="7_bmusr"]
[ext_resource type="Script" path="res://Entity/Player/Player States/PlayerStateGrabber.gd" id="8_2we1h"]
[ext_resource type="Script" path="res://Entity/Player/Player States/PlayerStateBlock.gd" id="9_6y1mk"]
[ext_resource type="Script" path="res://Entity/Player/Player States/PlayerStateDodge.gd" id="10_3io3g"]
[ext_resource type="Script" path="res://Entity/Player/Player States/PlayerStatePartner.gd" id="11_51j4e"]
[ext_resource type="Script" path="res://Entity/Player/Player States/PlayerStateGrounded.gd" id="11_fhkm0"]
[ext_resource type="Script" path="res://Entity/Player/Player States/PlayerStateStunned.gd" id="12_f1m8k"]
[ext_resource type="Shader" path="res://Shaders/CommonSprite.gdshader" id="12_lorah"]
[ext_resource type="PackedScene" uid="uid://mkpspgj6byif" path="res://Models/CharacterModel.tscn" id="12_rnjkj"]
[ext_resource type="FontFile" uid="uid://cacnxhnb6wexr" path="res://UI/Fonts/ApplePoke2.ttf" id="13_nxc3v"]
[ext_resource type="Texture2D" uid="uid://hvp1i1a7eemo" path="res://UI/TextArrowIcon.png" id="13_xeyd0"]
[ext_resource type="PackedScene" uid="uid://w2pd2ty8eu86" path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" id="14_iklt7"]
[ext_resource type="Script" path="res://UI/Inventory.gd" id="14_msqyj"]
[ext_resource type="Texture2D" uid="uid://dk8deutypac4v" path="res://Entity/Player/suitman sprites 2.png" id="14_n5wuy"]
[ext_resource type="Script" path="res://SpriteOrientation.gd" id="15_1jijy"]
[ext_resource type="AudioStream" uid="uid://cmkhnabtu7n2t" path="res://Sounds/footstep0.wav" id="15_i2ue0"]
[ext_resource type="PackedScene" uid="uid://b8yyu5oeqqxad" path="res://UI/HealthBar.tscn" id="15_prtxv"]
[ext_resource type="AudioStream" uid="uid://cxbos8pxe2jgq" path="res://Sounds/jumpsound2.wav" id="15_tjodk"]
[ext_resource type="PackedScene" uid="uid://05yr8b2uqsyb" path="res://Shadow.tscn" id="19_gbp5s"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yk3vu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vfqkj"]
render_priority = 0
shader = ExtResource("12_lorah")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/point_size = null
shader_parameter/uv1_scale = null
shader_parameter/uv1_offset = null
shader_parameter/uv2_scale = null
shader_parameter/uv2_offset = null
shader_parameter/texture_albedo = ExtResource("14_n5wuy")

[sub_resource type="Animation" id="Animation_wmpun"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:x_coord")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_u4b01"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:x_coord")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ojpmy"]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:x_coord")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer3D2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.5788,
"start_offset": 0.0088,
"stream": ExtResource("15_tjodk")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_a5htk"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:x_coord")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer3D2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.512,
"start_offset": 0.037,
"stream": ExtResource("15_i2ue0")
}, {
"end_offset": 0.512,
"start_offset": 0.037,
"stream": ExtResource("15_i2ue0")
}],
"times": PackedFloat32Array(0, 0.2)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ohsp6"]
_data = {
"RESET": SubResource("Animation_wmpun"),
"idle": SubResource("Animation_u4b01"),
"jump": SubResource("Animation_ojpmy"),
"run": SubResource("Animation_a5htk")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_btql4"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_46niy"]
radius = 2.02914

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mv10o"]
bg_color = Color(0, 0.572549, 0.145098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vo5c"]
bg_color = Color(0, 0.156863, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g01dm"]
transparency = 1
no_depth_test = true
shading_mode = 0
albedo_texture = ExtResource("13_xeyd0")
texture_filter = 0
use_point_size = true
point_size = 16.0

[sub_resource type="PointMesh" id="PointMesh_jujnn"]
material = SubResource("StandardMaterial3D_g01dm")

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_qmea8")
move_speed = 14.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("2_dti1d")
current_state = NodePath("Grounded")

[node name="Grounded" type="Node" parent="StateMachine"]
script = ExtResource("11_fhkm0")

[node name="InAir" type="Node" parent="StateMachine"]
script = ExtResource("5_ykyoh")

[node name="Stunned" type="Node" parent="StateMachine"]
script = ExtResource("12_f1m8k")

[node name="Partner" type="Node" parent="StateMachine"]
script = ExtResource("11_51j4e")

[node name="Primary" type="Node" parent="StateMachine"]
script = ExtResource("7_bmusr")

[node name="Secondary" type="Node" parent="StateMachine"]
script = ExtResource("8_2we1h")

[node name="Block" type="Node" parent="StateMachine"]
script = ExtResource("9_6y1mk")

[node name="Dodge" type="Node" parent="StateMachine"]
script = ExtResource("10_3io3g")

[node name="Model" parent="." instance=ExtResource("12_rnjkj")]
transform = Transform3D(0.45, 0, 0, 0, 0.45, 0, 0, 0, 0.45, 0, -0.25, 0)
visible = false

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_yk3vu")

[node name="Sprite3D2" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.167957, 0)
material_override = SubResource("ShaderMaterial_vfqkj")
pixel_size = 0.05
texture = ExtResource("14_n5wuy")
hframes = 6
vframes = 6
script = ExtResource("15_1jijy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite3D2"]
libraries = {
"": SubResource("AnimationLibrary_ohsp6")
}

[node name="Hurtbox" parent="." instance=ExtResource("14_iklt7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15227, 0)

[node name="CollisionShape3d" parent="Hurtbox" index="0"]
shape = SubResource("BoxShape3D_btql4")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.909923, 0)
attenuation_model = 3
max_polyphony = 5
attenuation_filter_cutoff_hz = 20500.0

[node name="Timer" type="Timer" parent="AudioStreamPlayer3D"]

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="."]
attenuation_model = 3
max_polyphony = 4

[node name="InteractRegion" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.90256)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractRegion"]
shape = SubResource("CylinderShape3D_46niy")

[node name="HealthBar" parent="." instance=ExtResource("15_prtxv")]
offset_left = 8.0
offset_top = 8.0
offset_right = 168.0
offset_bottom = 24.0
theme_override_styles/fill = SubResource("StyleBoxFlat_mv10o")
is_static = true

[node name="ManaBar" parent="." instance=ExtResource("15_prtxv")]
offset_left = 8.0
offset_top = 28.0
offset_right = 168.0
offset_bottom = 36.0
theme_override_styles/fill = SubResource("StyleBoxFlat_5vo5c")
is_static = true

[node name="GoldLabel" type="Label" parent="."]
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -57.0
offset_top = 11.0
offset_right = -17.0
offset_bottom = 34.0
grow_horizontal = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("13_nxc3v")
text = "$999"
horizontal_alignment = 2

[node name="Inventory" type="Node" parent="."]
script = ExtResource("14_msqyj")

[node name="PositionBreak" type="Node" parent="."]

[node name="AimIcon" type="Node3D" parent="PositionBreak"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="PositionBreak/AimIcon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
mesh = SubResource("PointMesh_jujnn")
skeleton = NodePath("../../../..")

[node name="PrimaryLabel" type="Label" parent="."]
texture_filter = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -106.0
offset_top = -49.0
offset_right = -14.0
offset_bottom = -26.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("13_nxc3v")
text = "Primary"
horizontal_alignment = 2

[node name="SecondaryLabel" type="Label" parent="."]
texture_filter = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -101.0
offset_top = -28.0
offset_right = -14.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("13_nxc3v")
text = "Secondary"
horizontal_alignment = 2

[node name="Shadow" parent="." instance=ExtResource("19_gbp5s")]

[connection signal="entity_died" from="." to="." method="_on_entity_died"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="Hurtbox"]
