[gd_scene load_steps=40 format=3 uid="uid://clqddee5b0xxg"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_cvs5f"]
[ext_resource type="Script" path="res://StateMachine.gd" id="2_avgf8"]
[ext_resource type="Script" path="res://Player/Player States/PlayerStateIdle.gd" id="3_6ojjg"]
[ext_resource type="Script" path="res://Player/Player States/PlayerStateRun.gd" id="4_h0npr"]
[ext_resource type="Script" path="res://Player/Player States/PlayerStateInAir.gd" id="5_brxl4"]
[ext_resource type="Script" path="res://Player/Player States/PlayerStateAttack1.gd" id="6_50c6j"]
[ext_resource type="PackedScene" uid="uid://xd1bfgk6xx34" path="res://CharacterModel.tscn" id="6_k6o4e"]
[ext_resource type="Script" path="res://Player/Player States/PlayerStateClimb.gd" id="6_ncqud"]
[ext_resource type="PackedScene" uid="uid://cn4f04q2g55a3" path="res://Inventory.tscn" id="7_8u26r"]
[ext_resource type="Script" path="res://Player/Player States/PlayerStateAttack2.gd" id="8_2pffb"]
[ext_resource type="PackedScene" uid="uid://w2pd2ty8eu86" path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" id="8_dt1gd"]
[ext_resource type="Script" path="res://Player/Player States/PlayerStateAttack3.gd" id="9_35sib"]
[ext_resource type="Script" path="res://Player/Player States/PlayerStateAttack4.gd" id="10_nnitf"]
[ext_resource type="Script" path="res://Player/Player States/PlayerStatePartner.gd" id="11_d78f0"]
[ext_resource type="PackedScene" uid="uid://bvvunidsq6cg6" path="res://newestsuitguy3animated2.glb" id="15_p18fs"]
[ext_resource type="Material" uid="uid://cn2hsvjcxpy5k" path="res://Materials/SuitMat1.tres" id="16_gc33k"]
[ext_resource type="Material" uid="uid://dfmd5ra4eppmd" path="res://Materials/ShoesMat1.tres" id="17_qo3y8"]
[ext_resource type="Material" uid="uid://bigeh386gtlxf" path="res://Materials/SkinMat1.tres" id="18_wd1jq"]
[ext_resource type="Material" uid="uid://co40a5q6qkfdw" path="res://Materials/ShirtMat2.tres" id="19_0qbyb"]
[ext_resource type="Material" uid="uid://dwd4v66xj57wb" path="res://Materials/ShirtMat3.tres" id="20_ywvm2"]
[ext_resource type="Shader" path="res://CommonSprite.gdshader" id="21_3lwlx"]
[ext_resource type="Texture2D" uid="uid://bw8nhytu5avd" path="res://Face Textures/head1.png" id="22_o6yse"]
[ext_resource type="Texture2D" uid="uid://dyp8o3aieogx8" path="res://Face Textures/head2.png" id="23_uyr1j"]
[ext_resource type="Texture2D" uid="uid://c6f1urtqksw7s" path="res://Face Textures/head3.png" id="24_olby4"]
[ext_resource type="Texture2D" uid="uid://c6jae17f1d73e" path="res://Face Textures/head4.png" id="25_2ge75"]
[ext_resource type="Texture2D" uid="uid://demos1o33m0bc" path="res://Face Textures/head5.png" id="26_40y7b"]
[ext_resource type="Texture2D" uid="uid://od8owedc74l1" path="res://Face Textures/head6.png" id="27_qqr3o"]
[ext_resource type="Texture2D" uid="uid://j4vx1ny5xwpq" path="res://Face Textures/head7.png" id="28_mfnea"]
[ext_resource type="Texture2D" uid="uid://dn6d8oy4hlspk" path="res://Face Textures/head8.png" id="29_ynj5q"]
[ext_resource type="Texture2D" uid="uid://c26ak17vulcu8" path="res://Face Textures/head9.png" id="30_cfkne"]
[ext_resource type="Texture2D" uid="uid://bko0tvfpiyn4a" path="res://Face Textures/head10.png" id="31_8biqu"]
[ext_resource type="Script" path="res://Head.gd" id="32_727oe"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yk3vu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_btql4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5kqb7"]
size = Vector3(2.24814, 1.518, 2.46)

[sub_resource type="AnimatedTexture" id="AnimatedTexture_2clme"]
resource_local_to_scene = true
frames = 10
pause = true
frame_0/texture = ExtResource("22_o6yse")
frame_1/texture = ExtResource("23_uyr1j")
frame_1/duration = 1.0
frame_2/texture = ExtResource("24_olby4")
frame_2/duration = 1.0
frame_3/texture = ExtResource("25_2ge75")
frame_3/duration = 1.0
frame_4/texture = ExtResource("26_40y7b")
frame_4/duration = 1.0
frame_5/texture = ExtResource("27_qqr3o")
frame_5/duration = 1.0
frame_6/texture = ExtResource("28_mfnea")
frame_6/duration = 1.0
frame_7/texture = ExtResource("29_ynj5q")
frame_7/duration = 1.0
frame_8/texture = ExtResource("30_cfkne")
frame_8/duration = 1.0
frame_9/texture = ExtResource("31_8biqu")
frame_9/duration = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7ir0v"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("21_3lwlx")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/point_size = 32.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = Plane(1, 0, 0, 0)
shader_parameter/specular = 0.0
shader_parameter/metallic = 0.0
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)
shader_parameter/texture_albedo = SubResource("AnimatedTexture_2clme")

[sub_resource type="PointMesh" id="PointMesh_jc0e4"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_7ir0v")

[sub_resource type="CylinderMesh" id="CylinderMesh_wv05y"]
material = ExtResource("18_wd1jq")
top_radius = 0.015
bottom_radius = 0.026
height = 0.084
radial_segments = 22

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_cvs5f")
move_speed = 15.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("2_avgf8")
current_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_6ojjg")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("4_h0npr")

[node name="InAir" type="Node" parent="StateMachine"]
script = ExtResource("5_brxl4")

[node name="Climb" type="Node" parent="StateMachine"]
script = ExtResource("6_ncqud")

[node name="Attack1" type="Node" parent="StateMachine"]
script = ExtResource("6_50c6j")

[node name="Attack2" type="Node" parent="StateMachine"]
script = ExtResource("8_2pffb")

[node name="Attack3" type="Node" parent="StateMachine"]
script = ExtResource("9_35sib")

[node name="Attack4" type="Node" parent="StateMachine"]
script = ExtResource("10_nnitf")

[node name="Partner" type="Node" parent="StateMachine"]
script = ExtResource("11_d78f0")

[node name="Model" parent="." instance=ExtResource("6_k6o4e")]
transform = Transform3D(0.45, 0, 0, 0, 0.45, 0, 0, 0, 0.45, 0, -0.25, 0)

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_yk3vu")

[node name="Inventory" parent="." instance=ExtResource("7_8u26r")]
iv = ["burning fist", "fireball", "bomb"]

[node name="Hurtbox" parent="." instance=ExtResource("8_dt1gd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15227, 0)

[node name="CollisionShape3d" parent="Hurtbox" index="0"]
shape = SubResource("BoxShape3D_btql4")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.909923, 0)
attenuation_model = 3
max_polyphony = 5
attenuation_filter_cutoff_hz = 20500.0

[node name="Timer" type="Timer" parent="AudioStreamPlayer3D"]

[node name="InteractBox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.67119)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractBox"]
shape = SubResource("BoxShape3D_5kqb7")

[node name="Model3" parent="." instance=ExtResource("15_p18fs")]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, -1, 0)
visible = false

[node name="Skeleton3D" parent="Model3/Armature" index="0"]
bones/0/position = Vector3(-4.16134e-19, 0.136509, -0.015636)
bones/0/rotation = Quaternion(0.22934, 1.16032e-07, 2.73394e-08, 0.973346)
bones/1/rotation = Quaternion(0.0433404, 4.65343e-15, 1.03332e-08, 0.99906)
bones/2/rotation = Quaternion(-0.231468, -7.30378e-15, -5.51864e-08, 0.972842)
bones/3/rotation = Quaternion(-0.00183006, 0.58117, -0.811911, 0.0551253)
bones/4/rotation = Quaternion(0.389391, -0.0357472, -0.0503273, 0.919002)
bones/5/rotation = Quaternion(0.164447, -0.0226062, -0.00502572, 0.986114)
bones/6/rotation = Quaternion(0.641572, -0.0126279, 0.0145877, 0.76682)
bones/7/rotation = Quaternion(-0.00831544, 0.603566, 0.79392, 0.0730079)
bones/8/rotation = Quaternion(0.565506, -0.0245808, 0.0277942, 0.823909)
bones/9/rotation = Quaternion(0.0144944, -0.0477283, 0.0131231, 0.998669)
bones/10/rotation = Quaternion(0.561015, -0.0332425, 0.0325295, 0.826498)
bones/11/rotation = Quaternion(-0.00555884, -0.633074, -0.774024, 0.00855194)
bones/12/rotation = Quaternion(-0.157608, 0.000736399, -0.0146751, 0.987392)
bones/13/rotation = Quaternion(0.640146, -0.0848507, 0.0448351, 0.762236)
bones/14/rotation = Quaternion(0.0034022, -0.169763, 0.985436, 0.00920116)
bones/15/rotation = Quaternion(-0.507639, -0.00205837, 0.0158719, 0.861421)
bones/16/rotation = Quaternion(0.471136, 0.0763369, -0.0621066, 0.876554)

[node name="arms" parent="Model3/Armature/Skeleton3D" index="0"]
material_override = ExtResource("16_gc33k")

[node name="calfs" parent="Model3/Armature/Skeleton3D" index="1"]
material_override = ExtResource("16_gc33k")

[node name="feet" parent="Model3/Armature/Skeleton3D" index="2"]
material_override = ExtResource("17_qo3y8")

[node name="forearms" parent="Model3/Armature/Skeleton3D" index="3"]
material_override = ExtResource("16_gc33k")

[node name="hands" parent="Model3/Armature/Skeleton3D" index="4"]
material_override = ExtResource("18_wd1jq")

[node name="head" parent="Model3/Armature/Skeleton3D" index="5"]
visible = false

[node name="pelvis" parent="Model3/Armature/Skeleton3D" index="6"]
material_override = ExtResource("16_gc33k")

[node name="shirt" parent="Model3/Armature/Skeleton3D" index="7"]
material_override = ExtResource("19_0qbyb")

[node name="thighs" parent="Model3/Armature/Skeleton3D" index="8"]
material_override = ExtResource("16_gc33k")

[node name="tie" parent="Model3/Armature/Skeleton3D" index="9"]
material_override = ExtResource("20_ywvm2")

[node name="torso" parent="Model3/Armature/Skeleton3D" index="10"]
material_override = ExtResource("16_gc33k")

[node name="weapons" parent="Model3/Armature/Skeleton3D" index="11"]
visible = false

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Model3/Armature/Skeleton3D" index="12"]
transform = Transform3D(1, 9.76996e-14, 2.38419e-07, 1.24518e-07, 0.852782, -0.522267, -2.03319e-07, 0.522267, 0.852782, 4.6495e-15, 0.15905, -0.0043896)
bone_name = "torso"
bone_idx = 1

[node name="Head" type="MeshInstance3D" parent="Model3/Armature/Skeleton3D/BoneAttachment3D"]
transform = Transform3D(1, 0, 1.13687e-13, 0, 0.999996, 0, 1.13687e-13, -2.98023e-08, 0.999998, 1.72783e-09, 0.168172, 0.00775297)
mesh = SubResource("PointMesh_jc0e4")
skeleton = NodePath("../..")
script = ExtResource("32_727oe")

[node name="BoneAttachment3D2" type="BoneAttachment3D" parent="Model3/Armature/Skeleton3D" index="13"]
transform = Transform3D(1, 9.76996e-14, 2.38419e-07, 1.24518e-07, 0.852782, -0.522267, -2.03319e-07, 0.522267, 0.852782, 4.6495e-15, 0.15905, -0.0043896)
bone_name = "torso"
bone_idx = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Model3/Armature/Skeleton3D/BoneAttachment3D2"]
transform = Transform3D(1, 1.4517e-07, -2.19792e-07, -1.12923e-07, 0.988809, 0.149178, 2.29105e-07, -0.149177, 0.988809, 0.000587419, 0.0756357, -0.00458057)
mesh = SubResource("CylinderMesh_wv05y")
skeleton = NodePath("../../BoneAttachment3D")

[node name="AnimationPlayer" parent="Model3" index="1"]
playback_speed = 1.1

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="Hurtbox"]
[editable path="Model3"]
